portainer-deployment/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: eip-elb-prod-portainer-server
    networking.gke.io/v1beta1.FrontendConfig: "frontendconfig-portainer-server"
    networking.gke.io/managed-certificates: portainer-mcrt
  labels:
    env: prod
    region: asia-northeast3
    service: portainer    
  name: elb-mkt-prod-stancloud-portainer
  namespace: portainer
spec:
  rules:
  - host: portainer.stancloud.shop
    http:
      paths:
      - backend:
          service:
            name: portainer
            port:
              number: 9000
        path: "/"
        pathType: Prefix
